Fixed white-space pre-wrap for <samp> tags.

--- a/sitecore/static/css/sitecore.css
+++ b/sitecore/static/css/sitecore.css
@@ -121,6 +121,7 @@ samp {
     padding: 2px 4px;
     font-size: 90%;
     color: #196dab;
+    white-space: pre-wrap;
 }
 
 .page-footer {
